Various updates. Start on UI
