# server/rpc/rpc.pb.go
@@ -1,326 +1,0 @@
-// Code generated by protoc-gen-go. DO NOT EDIT.
-// source: rpc.proto
-
-/*
-Package rpc is a generated protocol buffer package.
-
-It is generated from these files:
-	rpc.proto
-
-It has these top-level messages:
-	GetEntryRequest
-	ListEntriesRequest
-	EntryList
-	Entry
-	Author
-*/
-package rpc
-
-import proto "github.com/golang/protobuf/proto"
-import fmt "fmt"
-import math "math"
-import _ "google.golang.org/genproto/googleapis/api/annotations"
-
-import (
-	context "golang.org/x/net/context"
-	grpc "google.golang.org/grpc"
-)
-
-// Reference imports to suppress errors if they are not otherwise used.
-var _ = proto.Marshal
-var _ = fmt.Errorf
-var _ = math.Inf
-
-// This is a compile-time assertion to ensure that this generated file
-// is compatible with the proto package it is being compiled against.
-// A compilation error at this line likely means your copy of the
-// proto package needs to be updated.
-const _ = proto.ProtoPackageIsVersion2 // please upgrade the proto package
-
-type GetEntryRequest struct {
-	Id string `protobuf:"bytes,1,opt,name=id" json:"id,omitempty"`
-}
-
-func (m *GetEntryRequest) Reset()                    { *m = GetEntryRequest{} }
-func (m *GetEntryRequest) String() string            { return proto.CompactTextString(m) }
-func (*GetEntryRequest) ProtoMessage()               {}
-func (*GetEntryRequest) Descriptor() ([]byte, []int) { return fileDescriptor0, []int{0} }
-
-func (m *GetEntryRequest) GetId() string {
-	if m != nil {
-		return m.Id
-	}
-	return ""
-}
-
-type ListEntriesRequest struct {
-	Page       int64  `protobuf:"varint,1,opt,name=page" json:"page,omitempty"`
-	NumPerPage int64  `protobuf:"varint,2,opt,name=num_per_page,json=numPerPage" json:"num_per_page,omitempty"`
-	Keyword    string `protobuf:"bytes,3,opt,name=keyword" json:"keyword,omitempty"`
-}
-
-func (m *ListEntriesRequest) Reset()                    { *m = ListEntriesRequest{} }
-func (m *ListEntriesRequest) String() string            { return proto.CompactTextString(m) }
-func (*ListEntriesRequest) ProtoMessage()               {}
-func (*ListEntriesRequest) Descriptor() ([]byte, []int) { return fileDescriptor0, []int{1} }
-
-func (m *ListEntriesRequest) GetPage() int64 {
-	if m != nil {
-		return m.Page
-	}
-	return 0
-}
-
-func (m *ListEntriesRequest) GetNumPerPage() int64 {
-	if m != nil {
-		return m.NumPerPage
-	}
-	return 0
-}
-
-func (m *ListEntriesRequest) GetKeyword() string {
-	if m != nil {
-		return m.Keyword
-	}
-	return ""
-}
-
-type EntryList struct {
-	Entries    []*Entry `protobuf:"bytes,1,rep,name=entries" json:"entries,omitempty"`
-	NumResults int64    `protobuf:"varint,2,opt,name=num_results,json=numResults" json:"num_results,omitempty"`
-}
-
-func (m *EntryList) Reset()                    { *m = EntryList{} }
-func (m *EntryList) String() string            { return proto.CompactTextString(m) }
-func (*EntryList) ProtoMessage()               {}
-func (*EntryList) Descriptor() ([]byte, []int) { return fileDescriptor0, []int{2} }
-
-func (m *EntryList) GetEntries() []*Entry {
-	if m != nil {
-		return m.Entries
-	}
-	return nil
-}
-
-func (m *EntryList) GetNumResults() int64 {
-	if m != nil {
-		return m.NumResults
-	}
-	return 0
-}
-
-type Entry struct {
-	Id          string  `protobuf:"bytes,1,opt,name=id" json:"id,omitempty"`
-	Title       string  `protobuf:"bytes,2,opt,name=title" json:"title,omitempty"`
-	Content     string  `protobuf:"bytes,3,opt,name=content" json:"content,omitempty"`
-	Author      *Author `protobuf:"bytes,4,opt,name=author" json:"author,omitempty"`
-	CreatedDate string  `protobuf:"bytes,5,opt,name=created_date,json=createdDate" json:"created_date,omitempty"`
-}
-
-func (m *Entry) Reset()                    { *m = Entry{} }
-func (m *Entry) String() string            { return proto.CompactTextString(m) }
-func (*Entry) ProtoMessage()               {}
-func (*Entry) Descriptor() ([]byte, []int) { return fileDescriptor0, []int{3} }
-
-func (m *Entry) GetId() string {
-	if m != nil {
-		return m.Id
-	}
-	return ""
-}
-
-func (m *Entry) GetTitle() string {
-	if m != nil {
-		return m.Title
-	}
-	return ""
-}
-
-func (m *Entry) GetContent() string {
-	if m != nil {
-		return m.Content
-	}
-	return ""
-}
-
-func (m *Entry) GetAuthor() *Author {
-	if m != nil {
-		return m.Author
-	}
-	return nil
-}
-
-func (m *Entry) GetCreatedDate() string {
-	if m != nil {
-		return m.CreatedDate
-	}
-	return ""
-}
-
-type Author struct {
-	Id    string `protobuf:"bytes,1,opt,name=id" json:"id,omitempty"`
-	Email string `protobuf:"bytes,2,opt,name=email" json:"email,omitempty"`
-}
-
-func (m *Author) Reset()                    { *m = Author{} }
-func (m *Author) String() string            { return proto.CompactTextString(m) }
-func (*Author) ProtoMessage()               {}
-func (*Author) Descriptor() ([]byte, []int) { return fileDescriptor0, []int{4} }
-
-func (m *Author) GetId() string {
-	if m != nil {
-		return m.Id
-	}
-	return ""
-}
-
-func (m *Author) GetEmail() string {
-	if m != nil {
-		return m.Email
-	}
-	return ""
-}
-
-func init() {
-	proto.RegisterType((*GetEntryRequest)(nil), "rpc.GetEntryRequest")
-	proto.RegisterType((*ListEntriesRequest)(nil), "rpc.ListEntriesRequest")
-	proto.RegisterType((*EntryList)(nil), "rpc.EntryList")
-	proto.RegisterType((*Entry)(nil), "rpc.Entry")
-	proto.RegisterType((*Author)(nil), "rpc.Author")
-}
-
-// Reference imports to suppress errors if they are not otherwise used.
-var _ context.Context
-var _ grpc.ClientConn
-
-// This is a compile-time assertion to ensure that this generated file
-// is compatible with the grpc package it is being compiled against.
-const _ = grpc.SupportPackageIsVersion4
-
-// Client API for KobService service
-
-type KobServiceClient interface {
-	GetEntry(ctx context.Context, in *GetEntryRequest, opts ...grpc.CallOption) (*Entry, error)
-	ListEntries(ctx context.Context, in *ListEntriesRequest, opts ...grpc.CallOption) (*EntryList, error)
-}
-
-type kobServiceClient struct {
-	cc *grpc.ClientConn
-}
-
-func NewKobServiceClient(cc *grpc.ClientConn) KobServiceClient {
-	return &kobServiceClient{cc}
-}
-
-func (c *kobServiceClient) GetEntry(ctx context.Context, in *GetEntryRequest, opts ...grpc.CallOption) (*Entry, error) {
-	out := new(Entry)
-	err := grpc.Invoke(ctx, "/rpc.KobService/GetEntry", in, out, c.cc, opts...)
-	if err != nil {
-		return nil, err
-	}
-	return out, nil
-}
-
-func (c *kobServiceClient) ListEntries(ctx context.Context, in *ListEntriesRequest, opts ...grpc.CallOption) (*EntryList, error) {
-	out := new(EntryList)
-	err := grpc.Invoke(ctx, "/rpc.KobService/ListEntries", in, out, c.cc, opts...)
-	if err != nil {
-		return nil, err
-	}
-	return out, nil
-}
-
-// Server API for KobService service
-
-type KobServiceServer interface {
-	GetEntry(context.Context, *GetEntryRequest) (*Entry, error)
-	ListEntries(context.Context, *ListEntriesRequest) (*EntryList, error)
-}
-
-func RegisterKobServiceServer(s *grpc.Server, srv KobServiceServer) {
-	s.RegisterService(&_KobService_serviceDesc, srv)
-}
-
-func _KobService_GetEntry_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
-	in := new(GetEntryRequest)
-	if err := dec(in); err != nil {
-		return nil, err
-	}
-	if interceptor == nil {
-		return srv.(KobServiceServer).GetEntry(ctx, in)
-	}
-	info := &grpc.UnaryServerInfo{
-		Server:     srv,
-		FullMethod: "/rpc.KobService/GetEntry",
-	}
-	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
-		return srv.(KobServiceServer).GetEntry(ctx, req.(*GetEntryRequest))
-	}
-	return interceptor(ctx, in, info, handler)
-}
-
-func _KobService_ListEntries_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
-	in := new(ListEntriesRequest)
-	if err := dec(in); err != nil {
-		return nil, err
-	}
-	if interceptor == nil {
-		return srv.(KobServiceServer).ListEntries(ctx, in)
-	}
-	info := &grpc.UnaryServerInfo{
-		Server:     srv,
-		FullMethod: "/rpc.KobService/ListEntries",
-	}
-	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
-		return srv.(KobServiceServer).ListEntries(ctx, req.(*ListEntriesRequest))
-	}
-	return interceptor(ctx, in, info, handler)
-}
-
-var _KobService_serviceDesc = grpc.ServiceDesc{
-	ServiceName: "rpc.KobService",
-	HandlerType: (*KobServiceServer)(nil),
-	Methods: []grpc.MethodDesc{
-		{
-			MethodName: "GetEntry",
-			Handler:    _KobService_GetEntry_Handler,
-		},
-		{
-			MethodName: "ListEntries",
-			Handler:    _KobService_ListEntries_Handler,
-		},
-	},
-	Streams:  []grpc.StreamDesc{},
-	Metadata: "rpc.proto",
-}
-
-func init() { proto.RegisterFile("rpc.proto", fileDescriptor0) }
-
-var fileDescriptor0 = []byte{
-	// 391 bytes of a gzipped FileDescriptorProto
-	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0x6c, 0x92, 0x4d, 0x8e, 0xd3, 0x40,
-	0x10, 0x85, 0x65, 0x3b, 0x3f, 0xb8, 0x1c, 0x05, 0x28, 0x45, 0x60, 0x45, 0x48, 0x38, 0x86, 0x45,
-	0x56, 0xb1, 0x08, 0x27, 0x40, 0x0a, 0x42, 0x08, 0x16, 0x91, 0x39, 0x40, 0xd4, 0xb1, 0x4b, 0xa1,
-	0x85, 0xd3, 0x6d, 0xda, 0xed, 0xa0, 0x08, 0xb1, 0xe1, 0x02, 0x2c, 0x58, 0xcf, 0xa9, 0xe6, 0x0a,
-	0x73, 0x90, 0x91, 0xcb, 0xf1, 0x4c, 0x94, 0x99, 0x9d, 0xab, 0xdf, 0xab, 0x7a, 0x5f, 0x77, 0x19,
-	0x7c, 0x53, 0x66, 0x8b, 0xd2, 0x68, 0xab, 0xd1, 0x33, 0x65, 0x36, 0x7d, 0xb5, 0xd3, 0x7a, 0x57,
-	0x50, 0x22, 0x4a, 0x99, 0x08, 0xa5, 0xb4, 0x15, 0x56, 0x6a, 0x55, 0xb5, 0x96, 0x78, 0x06, 0x4f,
-	0x3f, 0x91, 0xfd, 0xa8, 0xac, 0x39, 0xa6, 0xf4, 0xb3, 0xa6, 0xca, 0xe2, 0x18, 0x5c, 0x99, 0x87,
-	0x4e, 0xe4, 0xcc, 0xfd, 0xd4, 0x95, 0x79, 0x9c, 0x03, 0x7e, 0x95, 0x15, 0x7b, 0x24, 0x55, 0x9d,
-	0x0b, 0xa1, 0x57, 0x8a, 0x1d, 0xb1, 0xcf, 0x4b, 0xf9, 0x1b, 0x23, 0x18, 0xa9, 0x7a, 0xbf, 0x29,
-	0xc9, 0x6c, 0x58, 0x73, 0x59, 0x03, 0x55, 0xef, 0xd7, 0x64, 0xd6, 0x8d, 0x23, 0x84, 0xe1, 0x0f,
-	0x3a, 0xfe, 0xd2, 0x26, 0x0f, 0x3d, 0x0e, 0xe8, 0xca, 0x38, 0x05, 0x9f, 0x29, 0x9a, 0x28, 0x7c,
-	0x0b, 0x43, 0x6a, 0xe3, 0x42, 0x27, 0xf2, 0xe6, 0xc1, 0x12, 0x16, 0xcd, 0xad, 0x5a, 0xcc, 0x4e,
-	0xc2, 0xd7, 0x10, 0x34, 0x71, 0x86, 0xaa, 0xba, 0xb0, 0xd5, 0x59, 0x5a, 0xda, 0x9e, 0xc4, 0xff,
-	0x1c, 0xe8, 0x73, 0xcf, 0xe5, 0x9d, 0x70, 0x02, 0x7d, 0x2b, 0x6d, 0xd1, 0x22, 0xfa, 0x69, 0x5b,
-	0x34, 0x74, 0x99, 0x56, 0x96, 0x94, 0xed, 0xe8, 0x4e, 0x25, 0xbe, 0x81, 0x81, 0xa8, 0xed, 0x77,
-	0x6d, 0xc2, 0x5e, 0xe4, 0xcc, 0x83, 0x65, 0xc0, 0x3c, 0x1f, 0xf8, 0x28, 0x3d, 0x49, 0x38, 0x83,
-	0x51, 0x66, 0x48, 0x58, 0xca, 0x37, 0xb9, 0xb0, 0x14, 0xf6, 0x79, 0x46, 0x70, 0x3a, 0x5b, 0x09,
-	0x4b, 0xf1, 0x02, 0x06, 0x6d, 0xd3, 0x63, 0x44, 0xb4, 0x17, 0xb2, 0xe8, 0x88, 0xb8, 0x58, 0x5e,
-	0x39, 0x00, 0x5f, 0xf4, 0xf6, 0x1b, 0x99, 0x83, 0xcc, 0x08, 0x57, 0xf0, 0xa4, 0xdb, 0x16, 0x4e,
-	0x18, 0xe1, 0x62, 0x79, 0xd3, 0xb3, 0x87, 0x8a, 0x5f, 0xfc, 0xbd, 0xbe, 0xf9, 0xef, 0x3e, 0xc3,
-	0x71, 0x72, 0x78, 0x97, 0x34, 0x8f, 0x76, 0x4c, 0x7e, 0xcb, 0xfc, 0x0f, 0x7e, 0x86, 0xe0, 0x6c,
-	0xa1, 0xf8, 0x92, 0x5b, 0x1e, 0xae, 0x78, 0x3a, 0xbe, 0x9f, 0xd5, 0xa8, 0xf1, 0x73, 0x9e, 0x17,
-	0xa0, 0x7f, 0x37, 0x6f, 0x3b, 0xe0, 0xbf, 0xe8, 0xfd, 0x6d, 0x00, 0x00, 0x00, 0xff, 0xff, 0x2e,
-	0x5f, 0x37, 0x12, 0x75, 0x02, 0x00, 0x00,
-}
